--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ABM Nazmul Hossain Khan</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
