--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ABM Nazmul Hossain Khan</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
 </head>
@@ -49,7 +49,7 @@
 
   <h1>What Client are say</h1>
   <div class="client-info">
-    <p>Bruce Moccy</p>
+    <h4>Bruce Moccy</h4>
     <p>Founder & CEO Alies</p>
   </div>
   <div class="comment">
