--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="half-width description">
       <h3>Hello I'm</h3>
       <h1>Nazmul Hossain</h1>
-      <p>You might saw me jumping,climbing building, and stopping trains.But nobody pays me a dime for that work</p>
-      <a href="#">HIRE ME</a>
+      <p>A professional Webdeveloper who created various segment Website as per client needs with due time.</p>
+      <a target="_blank" href="https://www.linkedin.com/in/a-b-m-nazmul-hossain-khan-93516a162/">HIRE ME</a>
     </div>
     
     <div class="half-width">
@@ -33,8 +33,8 @@
 
     <div class="half-width description">
       <h1>Biography</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque labore culpa fuga ad quis soluta sit dolores tempora, fugit saepe ipsam odit facilis dolor perspiciatis facere, dignissimos excepturi! Quos, voluptatem!</p>
-      <a href="#">Download CV</a>
+      <p>Coding is my passion.After getting MBA Degree i was imposed to join Bank long time,But now i am back to my passion to serve to world and myself a quality output.In that track i am learning a lot which makes me create a dynamic on my own way.</p>
+      <a target="_blank" href="https://www.linkedin.com/in/a-b-m-nazmul-hossain-khan-93516a162/">Download CV</a>
     </div>
   </section>
 
