--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
       <a target="_blank" href="https://www.linkedin.com/in/a-b-m-nazmul-hossain-khan-93516a162/">HIRE ME</a>
     </div>
     
-    <div class="half-width">
-      <img src="images/peter.png" alt="">
+    <div class="half-width profile">
+      <img src="images/edo pro.png" alt="">
     </div>
   </section>
 
 <!-- BIOGRAPHY AREA -->
-  <section class="biography">
+  <section class="biography bio-pic">
     <div class="half-width">
-      <img src="images/peter_dream.png" alt="">
+      <img src="images/biopic.png" alt="">
     </div>
 
     <div class="half-width description">
