comment client rectify

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <p>Founder & CEO Alies</p>
   </div>
   <div class="comment">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae incidunt </p>
+    <p>Carry on your enthusiasm on work which make me happy by your service  </p>
   </div>
 
   <div class="contact">
